--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,5 +25,7 @@
         app:adSize="BANNER"
         app:adUnitId="@string/AdUnitId" />
 
+    <!-- app:adUnitId="@string/AdUnitId_sample" -->
+
 
 </RelativeLayout>
